--- a/app/src/main/res/layout/activity_main_sign_up.xml
+++ b/app/src/main/res/layout/activity_main_sign_up.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/button_Sign_Up"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -86,5 +86,5 @@
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/button_Sign_Up" />
 </androidx.constraintlayout.widget.ConstraintLayout>
