--- a/app/src/main/res/layout/activity_main_forgot_password.xml
+++ b/app/src/main/res/layout/activity_main_forgot_password.xml
@@ -62,7 +62,7 @@
         android:backgroundTint="@color/design_default_color_primary"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button_send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -75,7 +75,7 @@
         android:background="@drawable/button_rounded"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -84,6 +84,6 @@
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button_send"
         android:background="@drawable/button_rounded_2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
