--- a/app/src/main/res/layout/activity_main_forgot_password.xml
+++ b/app/src/main/res/layout/activity_main_forgot_password.xml
@@ -15,11 +15,14 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/design_default_color_primary"
         android:ems="10"
-        android:hint="Correo"
+        android:hint="@string/correo_"
         android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
@@ -28,13 +31,16 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/design_default_color_primary"
         android:ems="10"
+        android:hint="@string/ingrese_nueva_contrase_a"
         android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
-        android:hint="Ingrese Nueva Contraseña"
-        android:backgroundTint="@color/design_default_color_primary"/>
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editTextTextPassword3"
@@ -43,13 +49,16 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/design_default_color_primary"
         android:ems="10"
+        android:hint="@string/reingrese_nueva_contrase_a"
         android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
-        android:hint="Reingrese Nueva Contraseña"
-        android:backgroundTint="@color/design_default_color_primary"/>
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/button_send"
@@ -58,7 +67,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Send"
+        android:text="@string/send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
@@ -71,9 +80,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="Login"
+        android:background="@drawable/button_rounded_2"
+        android:text="@string/login_"
+        android:textColor="#283593"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_send"
-        android:background="@drawable/button_rounded_2"/>
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
