--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="32dp"
-        android:text="monitorApp"
+        android:text="@string/monitorapp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginEnd="100dp"
         android:gravity="center"
         android:hapticFeedbackEnabled="false"
-        android:text="99.9"
+        android:text="@string/_99_9"
         android:textSize="96sp"
         android:textStyle="bold|italic"
         app:guidelineUseRtl="false"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="100dp"
         android:gravity="center"
         android:hapticFeedbackEnabled="false"
-        android:text="99.9"
+        android:text="@string/_99_9_"
         android:textSize="96sp"
         android:textStyle="bold|italic"
         app:guidelineUseRtl="false"
@@ -63,7 +63,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="150dp"
         android:gravity="center"
-        android:text="%HbO2"
+        android:text="@string/hbo2"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:layout_height="27dp"
         android:layout_marginTop="24dp"
         android:gravity="center"
-        android:text="pul/min"
+        android:text="@string/pul_min"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Salir"
+        android:text="@string/salir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
